# pysesameos2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/: .codecov.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  enhancement-request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docs/: api.md  installation.md  usage.md
docs/styles/: override.css
example/: connect.py  discover.py
example/mqtt2sesame/: README.md  config.yml  discover.py  mqtt2sesame.py  requirements.txt
pysesameos2/: __init__.py  ble.py  chsesame2.py  chsesamebot.py  const.py  crypto.py  device.py  helper.py
tests/: __init__.py  conftest.py  test_ble.py  test_chsesame2.py  test_chsesamebot.py  test_crypto.py  test_device.py  test_helper.py
