[tool]

[tool.poetry]
name = "pysesameos2"
version = "0.0.1"
homepage = "https://github.com/mochipon/pysesameos2"
description = "Unofficial library to control smart devices running Sesame OS2."
authors = ["Masaki Tagawa <masaki@tagawa.email>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pysesameos2" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

bleak = "^0.12.0"
cryptography = "^3.4.7"

# docs
# should be a dev requirement, but for readthedocs to build must by a dependency
livereload = { version = "^2.6.3", optional = true }
mkdocs = { version = "^1.1.2", optional = true }
mkdocstrings = { version = "^0.15.0", optional = true }
mkdocs-autorefs = { version = "^0.2.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^3.1.3", optional = true }
mkdocs-material = { version = "^7.1.8", optional = true }
aenum = "^3.1.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
black = "^21.6b0"
bump2version = "^1.0.1"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
tox = "^3.23.1"
twine = "^3.4.1"

[tool.poetry.extras]
doc = [
    "livereload",
    "mkdocs",
    "mkdocstrings",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
