[tool]

[tool.poetry]
name = "pysesameos2"
version = "0.0.5"
homepage = "https://github.com/mochipon/pysesameos2"
description = "Unofficial library to control smart devices running Sesame OS2."
authors = ["Masaki Tagawa <masaki@tagawa.email>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pysesameos2" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

bleak = "^0.14.3"
cryptography = "^37.0.2"

typing-extensions = { version = "^4.2.0", python = "<3.8" }
importlib-metadata = {version = "^4.11.4", python = "<3.8"}

# docs
# should be a dev requirement, but for readthedocs to build must by a dependency
livereload = { version = "^2.6.3", optional = true }
mkdocs = { version = "^1.3.0", optional = true }
mkdocstrings = { version = "^0.19.0", optional = true }
mkdocstrings-python = { version = "^0.7.0", optional = true }
mkdocs-autorefs = { version = "^0.4.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^3.5.1", optional = true }
mkdocs-material = { version = "^8.2.15", optional = true }
aenum = "^3.1.11"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
bump2version = "^1.0.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.extras]
doc = [
    "livereload",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "strict"
